<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/areas_title"
                app:menu="@menu/area_details_top_app_bar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                />

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            >

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/areaCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:id="@+id/areaImageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitStart"
                        android:adjustViewBounds="true"
                        >

                    </ImageView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:textAppearance="?attr/textAppearanceCaption"
                            android:textColor="?android:attr/textColorSecondary"
                            android:text="@string/area_id"
                            />

                        <TextView
                            android:id="@+id/areaIdText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:textAppearance="?attr/textAppearanceBody1"
                            android:textColor="?android:attr/textColorPrimary"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:textAppearance="?attr/textAppearanceCaption"
                            android:textColor="?android:attr/textColorSecondary"
                            android:text="@string/area_owner"
                            />

                        <TextView
                            android:id="@+id/areaOwnerName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:textAppearance="?attr/textAppearanceBody1"
                            android:textColor="?android:attr/textColorPrimary"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:textAppearance="?attr/textAppearanceCaption"
                            android:textColor="?android:attr/textColorSecondary"
                            android:text="@string/area_location"
                            />

                        <TextView
                            android:id="@+id/areaLocation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:textAppearance="?attr/textAppearanceBody1"
                            android:textColor="?android:attr/textColorPrimary"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:textAppearance="?attr/textAppearanceCaption"
                            android:textColor="?android:attr/textColorSecondary"
                            android:text="@string/area_location_point"
                            />

                        <TextView
                            android:id="@+id/areaLocationPoint"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:textAppearance="?attr/textAppearanceBody1"
                            android:textColor="?android:attr/textColorPrimary"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:textAppearance="?attr/textAppearanceCaption"
                            android:textColor="?android:attr/textColorSecondary"
                            android:text="@string/area_category"
                            />

                        <TextView
                            android:id="@+id/areaCategoryText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:textAppearance="?attr/textAppearanceBody1"
                            android:textColor="?android:attr/textColorPrimary"
                            />

                    </LinearLayout>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
